_build/_log
### Starting build.
# Target: dogma.ml.depends, tags: { extension:ml, file:dogma.ml, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules dogma.ml > dogma.ml.depends
# Target: dogma.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:dogma.cmo, file:dogma.ml, implem, ocaml, quiet }
ocamlfind ocamlc -c -o dogma.cmo dogma.ml
# Target: card.ml.depends, tags: { extension:ml, file:card.ml, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules card.ml > card.ml.depends
# Target: card.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:card.cmo, file:card.ml, implem, ocaml, quiet }
ocamlfind ocamlc -c -o card.cmo card.ml
# Target: state.ml.depends, tags: { extension:ml, file:state.ml, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules state.ml > state.ml.depends
+ ocamlfind ocamldep -modules state.ml > state.ml.depends
File "state.ml", line 82, characters 0-3:
82 | let update_hand player hand_idx = 
     ^^^
Error: Syntax error
Command exited with code 2.
# Compilation unsuccessful.
